ajustando kafka
